# RPC-RUST

./: Cargo.toml  README.md
httpserver/: Cargo.toml
httpserver/src/: http_common.rs  lib.rs
httpserver/src/v1/: extractors.rs  metadata.rs  mod.rs
httpserver/src/v1/helpers/: errors.rs  request.rs
httpserver/src/v1/types/: mod.rs  provenance.rs
rpc_project/: Cargo.toml
rpc_project/src/: http_common.rs  lib.rs  rpc.rs  rpc_service.rs  test
rpc_project/src/v1/: extractors.rs
rpc_project/src/v1/impls/: transaction.rs
service/: lib.rs  rpc.rs  rpc_apis.rs
