[package]
name = "Parity_Rpc"
version = "0.1.0"
authors = ["nagaraj <nagarajmanjunath22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0.104"
serde_json = "1.0"
futures = "0.1"
jsonrpc-core = "14.0.3"
ethereum-types = "0.8.0"
httpserver = { path = "./httpserver" }



[lib]
path = "service/lib.rs"